tests/tooling/fixtures/native/recovery/negative/negative_return_nonvoid_missing_value.objc3
// Expected diagnostic code(s): O3S211.
module NegativeReturnNonvoidMissingValue;

fn helper() -> i32 {
  return;
}

fn main() -> i32 {
  return helper();
}
